Templated Content, Refreshed Palette

--- a/www/blog/authors.yml
+++ b/www/blog/authors.yml
@@ -1,17 +1,12 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+nitya:
+  name: Nitya Narasimhan
+  title: Senior Cloud Advocate @Microsoft
+  url: https://twitter.com/nitya
+  image_url: https://github.com/nitya.png
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
+reshmi:
+  name: Reshmi Sriram
+  title: PM, Static Web Apps @Microsoft
+  url: https://twitter.com/reshsriram
+  image_url: https://github.com/Reshmi-Sriram.png
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
