Update authors.yml to include Michail Shaposhnikov

--- a/www/blog/authors.yml
+++ b/www/blog/authors.yml
@@ -10,3 +10,8 @@ reshmi:
   url: https://twitter.com/reshsriram
   image_url: https://github.com/Reshmi-Sriram.png
 
+michail:
+  name: Michail Shaposhnikov
+  title: Software Engineer @Microsoft
+  url: https://github.com/mishapos
+  image_url: https://github.com/mishapos.png
