Week 2, Day 6 => Ready / Reviewed

--- a/www/blog/authors.yml
+++ b/www/blog/authors.yml
@@ -59,10 +59,10 @@ justin:
   image_url: https://github.com/justinyoo.png
 
 max:
-  name: Max Salnikov
-  title: Senior Cloud Advocate @Microsoft
-  url: http://devkimchi.com
-  image_url: https://github.com/justinyoo.png
+  name: Maxim Salnikov
+  title: Developer Relations @Microsoft
+  url: https://twitter.com/webmaxru
+  image_url: https://github.com/webmaxru.png
 
 jen:
   name: Jen Looper
