Week 3, Day 5/6/7 Setup

--- a/www/blog/authors.yml
+++ b/www/blog/authors.yml
@@ -133,7 +133,7 @@ david:
 debbie:
   name: Debbie O'Brien
   title: Senior PM @Microsoft @Playwright
-  url: https://github.com/debs-obrien
+  url: https://twitter.com/debs-obrien
   image_url: https://github.com/debs-obrien.png
 
 ayşegül:
