Week 4, Day 2 => Received

--- a/www/blog/authors.yml
+++ b/www/blog/authors.yml
@@ -101,7 +101,7 @@ natalia:
   image_url: https://github.com/anfibiacreativa.png
 
 dina:
-  name: Dina Berryhttps://github.com/anfibiacreativa
+  name: Dina Berry
   title: Senior Content Developer @Microsoft
   url: https://github.com/diberry
   image_url: https://github.com/diberry.png
