--- a/www/blog/authors.yml
+++ b/www/blog/authors.yml
@@ -136,7 +136,7 @@ debbie:
   url: https://twitter.com/debs-obrien
   image_url: https://github.com/debs-obrien.png
 
-ayşegül:
+yönet:
   name: Ayşegül Yönet
   title: Senior Developer Advocate @Microsoft
   url: https://github.com/Yonet
