Updating May 29 article topic/author

--- a/www/blog/authors.yml
+++ b/www/blog/authors.yml
@@ -141,3 +141,9 @@ yönet:
   title: Senior Developer Advocate @Microsoft
   url: https://github.com/Yonet
   image_url: https://github.com/Yonet.png
+
+christopher:
+  name: Christopher Harrison
+  title: Senior Developer Advocate @Microsoft
+  url: https://github.com/GeekTrainer
+  image_url: https://github.com/GeekTrainer.png
