--- a/.github/workflows/playwright-nightly.yml
+++ b/.github/workflows/playwright-nightly.yml
@@ -2,9 +2,7 @@ name: Playwright tests
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request and nightly
-  push:
-  pull_request:
+  # Triggers the workflow nightly
   schedule: 
     # nightly
     - cron: '0 0 * * *'
