--- a/.github/workflows/playwright-dashboard.yml
+++ b/.github/workflows/playwright-dashboard.yml
@@ -1,7 +1,12 @@
+# Runs test on changes to main and nightly
 name: Playwright tests
 
 # Controls when the workflow will run
 on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   # Triggers the workflow nightly
   schedule: 
     # nightly
