renamed the 2 playwright github actions into more specific names

--- a/.github/workflows/playwright-dashboard.yml
+++ b/.github/workflows/playwright-dashboard.yml
@@ -1,5 +1,5 @@
 # Runs test on changes to main and nightly
-name: Playwright tests
+name: Playwright tests for dashboard
 
 # Controls when the workflow will run
 on:
