--- a/.github/workflows/playwright-scheduled.yml
+++ b/.github/workflows/playwright-scheduled.yml
@@ -7,6 +7,10 @@ on:
     # nightly
     - cron: '0 0 * * *'
 
+defaults:
+  run:
+    working-directory: www
+    
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test:
